<resources>
    <string name="app_name">awesome-android-ui</string>
    <string name="invalid_assets">Unable to load assets</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="start">开始</string>
    <string name="stop">暂停</string>
    <string name="menu_activity">福利</string>
    <string name="menu_main">Android</string>
    <string name="menu_settings">iOS</string>
    <string name="menu_videos">视频</string>
    <string name="menu_web">前端</string>

    <string name="read_more">显示更多</string>
    <string name="read_less">显示较少</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras feugiat, nunc eget volutpat viverra, lacus ligula venenatis nulla, in accumsan eros eros nec ipsum. Fusce eget massa id lorem blandit lobortis. Donec lacus ligula, commodo quis eleifend ac, rhoncus sed mi. Curabitur luctus justo vel consequat fermentum. Donec facilisis elit in sem suscipit pharetra. Curabitur porta et dolor eget pretium. Mauris quam augue, interdum nec tempor vitae, consectetur at erat.</string>
    <string name="lorem_ipsum2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras feugiat, nunc eget volutpat viverra, lacus ligula venenatis nulla, in accumsan eros eros nec ipsum. Fusce eget massa id lorem blandit lobortis. Donec lacus ligula, commodo quis eleifend ac, rhoncus sed mi. </string>
    <string name="lorem_ipsum3">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Cras feugiat, nunc eget volutpat viverra, lacus ligula venenatis nulla, in accumsan eros eros nec ipsum. Fusce eget massa id lorem blandit lobortis.</string>
    <string name="show_all_content">Show all content</string>

    <string name="transition_name" translatable="false">square_transition</string>

    <string name="tower_of_london">The Tower of London has played a prominent role in English history. It was besieged several times and controlling it has been important to controlling the country. The Tower has served variously as an armoury, a treasury, a menagerie, the home of the Royal Mint, a public records office, and the home of the Crown Jewels of the United Kingdom. From the early 14th century until the reign of Charles II, a procession would be led from the Tower to Westminster Abbey on the coronation of a monarch. In the absence of the monarch, the Constable of the Tower is in charge of the castle. This was a powerful and trusted position in the medieval period. In the late 15th century the castle was the prison of the Princes in the Tower. Under the Tudors, the Tower became used less as a royal residence, and despite attempts to refortify and repair the castle its defences lagged behind developments to deal with artillery.</string>

    <string name="scene">Scene</string>
    <string name="scene_1">1</string>
    <string name="scene_2">2</string>
    <string name="scene_3">3</string>
    <string name="additional_message">This text fades in.</string>


    <string name="button.finish">FINISH</string>
    <string name="button.next">NEXT</string>
    <string name="button.skip">SKIP</string>

    <string-array name="titles">
        <item>Nav</item>
        <item>Tab</item>
        <item>Strip</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_constraint">ConstraintActivity</string>

    <string name="permission_request_denied">需要相应的权限</string>
    <string name="error_gif">长宽不小于 %1$dpx，且大小不超过 %2$sM。</string>
    <string name="title_activity_kotlin">KotlinActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_day_night">黑夜模式</string>
</resources>
