<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottomBarItemActivity"
        android:icon="@mipmap/ic_face_white_24dp"
        android:title="@string/menu_activity" />
    <item
        android:id="@+id/bottomBarItemMain"
        android:icon="@mipmap/ic_android_white_24dp"
        android:title="@string/menu_main" />
    <item
        android:id="@+id/bottomBarItemSettings"
        android:icon="@mipmap/ic_chrome_reader_mode_white_24dp"
        android:title="@string/menu_settings" />

    <item
        android:id="@+id/bottomBarItemVideos"
        android:icon="@mipmap/ic_movie_white_24dp"
        android:title="@string/menu_videos" />
    <item
        android:id="@+id/bottomBarItemWeb"
        android:icon="@mipmap/ic_dashboard_white_24dp"
        android:title="@string/menu_web" />
</menu>