<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordrinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:transitionName="@string/transition_name">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:elevation="@dimen/default_elevation"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
        <android.support.design.widget.TabLayout
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="?attr/colorPrimary"
            app:tabTextColor="@color/white"
            app:tabSelectedTextColor="@color/colorAccent"
            app:tabIndicatorHeight="0dp"
            app:tabMode="scrollable"
            app:tabGravity="center"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
<com.dalingge.awesome.widget.NavigationTabStrip
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_gravity="center"
    app:nts_active_color="#fff"
    app:nts_color="#ff1748"
    app:nts_factor="2.8"
    app:nts_corners_radius="1.5dp"
    app:nts_inactive_color="#81ffffff"
    app:nts_titles="@array/titles"
    app:nts_typeface="fonts/drugs.otf"
    app:nts_weight="3dp"/>

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start" />

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop" />


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
